change menu, fix overflow raised amount
change menu, fix overflow raised amount

--- a/app/assets/stylesheets/chairperson_dashboard.css.scss
+++ b/app/assets/stylesheets/chairperson_dashboard.css.scss
@@ -148,8 +148,9 @@
         line-height: 1;
 		
 		label {
-			font-size: 30px;
+			font-size: 26px;
 			font-weight: bold;
+			margin-left: -5px;
 		}
 		
         span {
