--- a/app/assets/stylesheets/seller_dashboard.css.scss
+++ b/app/assets/stylesheets/seller_dashboard.css.scss
@@ -66,8 +66,9 @@
 		padding-top: 0px;
 		
 		label {
-			font-size: 30px;
+			font-size: 26px;
 			font-weight: bold;
+			margin-left: -5px;
 		}
 		
         span {
